objects/COXProduct__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Issue__c</fullName>
        <label>Category Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manage Gateway</fullName>
                </value>
                <value>
                    <fullName>Connectivity Issue</fullName>
                </value>
                <value>
                    <fullName>Manage Static IPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Equipment_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Equipment Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Equipment_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Equipment Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Issue__c</fullName>
        <label>Customer Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intermittent Connectivity</fullName>
                </value>
                <value>
                    <fullName>No Connectivity</fullName>
                </value>
                <value>
                    <fullName>IP Issues</fullName>
                </value>
                <value>
                    <fullName>Slow Speeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Get_Ethernet_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Ethernet Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_Cycle_Cox_EQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power Cycle Cox EQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>TV-DTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reboot_Modem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reboot Modem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Guided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Guided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Swap_Ethernet_Cables__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swap Ethernet Cables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toggle_Device_WiFi_Radio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle Device WiFi Radio</label>
        <type>Checkbox</type>
    </fields>
    <label>COXProduct</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>Category_Issue__c</columns>
        <columns>Customer_Issue__c</columns>
        <columns>Self_Guided__c</columns>
        <columns>Reboot_Modem__c</columns>
        <columns>Get_Ethernet_Status__c</columns>
        <columns>Toggle_Device_WiFi_Radio__c</columns>
        <columns>Power_Cycle_Cox_EQ__c</columns>
        <columns>Swap_Ethernet_Cables__c</columns>
        <columns>Check_Equipment_Connection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Produc01 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COXProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>